# rmk-gui

./: .gitignore  .prettierrc.toml  CHANGELOG.md  LICENSE-MIT  README.md  components.json  eslint.config.js  eslint.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  release-please-config.json  rustfmt.toml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vercel.json
.github/workflows/: build-publish.yml  build-test.yml  build.yml  release-please.yml  release-please.yml.yml
.husky/: pre-commit
app/: app.vue
app/assets/: main.css
app/assets/css/: tailwind.css
app/components/: Header.vue  HidUnsupport.vue  HomeCard.vue  Key.vue  KeyBoard.vue  Keyboard.vue  LayerSelecter.vue  MacroGroup.vue  MacroSelecter.vue  MapperDialog.vue  MapperPanel.vue  Selector.vue  Sidebar.vue  Switcher.vue  Theme.vue
app/components/Aside/: Aside.vue  Card.vue
app/components/ConnHID/: ConnHID.vue  Tauri.vue  Web.vue
app/components/KeyMap/: Key.vue  KeyboardCanvas.vue
app/components/Macros/: List.vue  Select.vue
app/components/ui/drawer/: Drawer.vue  DrawerContent.vue  DrawerDescription.vue  DrawerOverlay.vue  DrawerTitle.vue
app/components/ui/input/: Input.vue
app/components/ui/number-field/: NumberField.vue  NumberFieldContent.vue  NumberFieldDecrement.vue  NumberFieldIncrement.vue  NumberFieldInput.vue
app/components/ui/select/: SelectContent.vue  SelectItem.vue  SelectTrigger.vue
app/components/ui/toast/: Toast.vue  ToastAction.vue  ToastClose.vue  ToastDescription.vue  ToastTitle.vue  ToastViewport.vue  index.ts  use-toast.ts
app/middleware/: loading.global.ts
app/pages/: combos.vue  export.vue  index.vue  keymap.vue  macro.vue  macros.vue  ota.vue  setting.vue  settings.vue
app/plugins/: piniaPersist.client.ts  vue-draggable-plus.client.ts
app/stores/: hidDevices.ts  keyboard.ts  pageKeymap.ts  pageMacro.ts  pageMacros.ts  theme.ts
app/types/: constants.ts  global.d.ts  hid.ts  macros.ts  vial.ts
app/utils/: errorToast.ts  hid.ts  keyDisplay.ts  platform.ts  tauri.ts  toast.ts  vial.ts
codegen/: extkey.py  gen.py  keycode.rs  lib.py  symbol.py  template.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmds.rs  commands.rs  lib.rs  main.rs  usb.rs  utils.rs
src-tauri/src/cmds/: commands.rs  home.rs  keymap.rs  marco.rs  mod.rs  util.rs
src-tauri/src/model/: app_state.rs  constants.rs  mod.rs  usb_device.rs
src-tauri/src/models/: app_state.rs  constants.rs  error.rs  keyboard.rs  keycode.rs  macros.rs  mod.rs  usb_device.rs  vial_device.rs
src-tauri/src/utils/: mod.rs  usb.rs
