[package]
name = "rmk-gui"
version = "0.2.0"
description = "Gui configuration for RMK based on Tauri and Nuxt"
authors = ["LiYang"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/liyang8246/rmk-gui"
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
hidapi = "2.6.3"
thiserror = "2.0"
byteorder = "1.5"
xz2 = "0.1"
itertools = "0.14"
num_enum = "0.7"
strum = { version = "0.27", features = ["derive"] }
kle-serial = "0.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
