[package]
name = "rmk-gui"
version = "0.5.0"
description = "Gui configuration for RMK based on Tauri and Nuxt"
authors = [ "LiYang" ]
repository = "https://github.com/liyang8246/rmk-gui"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rmk_gui_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.143"
hidapi = "2.6.3"
anyhow = "1.0.99"
dirs = "6.0.0"
toml = "0.9.5"
